argocd/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: argocd.container.it-scholar.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: argocd.container.it-scholar.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-tls
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Same
